# robotics-projects1

./: README.md
ws_IRC_2dof_cartesian/src/manipulator1/config/: rviz_config.rviz
ws_IRC_2dof_cartesian/src/manipulator1/meshes/: bevel1.STL  gl1.STL  jaw11.STL  jaw22.STL  jaw_cover_2.STL  link1_side_plate2.STL  link2.STL  link2_holder.STL  link2_side_plate11.STL  link2_side_plate21.STL  link2_side_plate_12.STL  link3_holder.STL
ws_IRC_2dof_cartesian/src/manipulator1/scripts/: gripper_kinematics.py
ws_IRC_2dof_cartesian/src/manipulator1/urdf/: manipulator1_without_gripper.urdf
ws_IRC_2dof_cartesian/src/manipulator1_moveit_servo2/: .setup_assistant  CMakeLists.txt  imu_jointstate_bridge.py  keyboard_bridge.py  package.xml  servo_to_motor_bridge.py
ws_IRC_2dof_cartesian/src/manipulator1_moveit_servo2/config/: initial_positions.yaml  joint_limits.yaml  manipulator1.ros2_control.xacro  manipulator1.srdf  manipulator1.urdf.xacro  moveit.rviz  moveit_controllers.yaml  moveit_servo.yaml  ros2_controllers.yaml
ws_IRC_2dof_cartesian/src/manipulator1_moveit_servo2/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  servo.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  (+2 more)
ws_IRC_5dof_cartesian/: keyboard_twist_publisher.py  readme.md
ws_IRC_5dof_cartesian/src/: readme.txt
ws_IRC_5dof_cartesian/src/keyboard_pkg/: package.xml  setup.cfg  setup.py
ws_IRC_5dof_cartesian/src/manipulator1/: CMakeLists.txt  package.xml
ws_IRC_5dof_cartesian/src/manipulator1/config/: joint_names_new_manipulator_urdf2.yaml
ws_IRC_5dof_cartesian/src/manipulator1/meshes/: base_plate.STL  bevel2.STL  bevelcoupler.STL  link1.STL  link1_end_part.STL  link1_holder.STL  link1_side_plate1.STL  link1_side_plate22.STL  link3.STL  plate_support.STL  servo.STL
ws_IRC_5dof_cartesian/src/manipulator1/urdf/: manipulator1.urdf
ws_IRC_5dof_cartesian/src/manipulator1_moveit_pkg/: .setup_assistant  CMakeLists.txt  package.xml
ws_IRC_5dof_cartesian/src/manipulator1_moveit_pkg/config/: cartesian_config.yaml  cartesian_rviz.rviz  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  manipulator1.ros2_control.xacro  manipulator1.srdf  moveit_controllers.yaml  ros2_controllers.yaml
ws_IRC_5dof_cartesian/src/manipulator1_moveit_pkg/launch/: cartesian.launch.py  demo.launch.py  launch1.py
ws_IRC_5dof_cartesian/src/manipulator1_moveit_pkg/src/: joy_to_twist.cpp
ws_caterpillar_auto_final/src/caterpillar_manip/: README.md  package.xml  setup.cfg  setup.py
ws_goalpose_moveit/src/new_manipualtor2/: CMakeLists.txt  README.md  package.xml
ws_goalpose_moveit/src/pose_specify2/: CMakeLists.txt  package.xml
ws_goalpose_moveit/src/pose_specify2/src/: pose_specify_node.cpp
ws_moveit_pathplan/src/manipulator1_moveit_pkg4/: .setup_assistant  CMakeLists.txt  package.xml  servo_teleop.py
(+48 files in other folders)
